--- a/publish/appsettings.json
+++ b/publish/appsettings.json
@@ -1,4 +1,5 @@
 {
   "FmbSourcePath": "D:\\MD\\OASIS",
-  "FmbOutputPath": "D:\\oracleFormOutput"
+  "FmbOutputPath": "",
+  "TranslationRootPath": ""
 }
