--- a/publish/appsettings.json
+++ b/publish/appsettings.json
@@ -1,5 +1,5 @@
 {
   "FmbSourcePath": "D:\\MD\\OASIS",
-  "FmbOutputPath": "",
+  "FmbOutputPath": "D:\\oracleFormOutput",
   "TranslationRootPath": "D:\\Projects\\dlp-develop"
 }
